update k8s jenkins cicd file.